# ztmux

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml  release.yml
completions/: _ztmux
docs/: BUGS.md  PORT.md  hud-static.css  index.html  report.html
fuzz/: Cargo.toml  README.md
fuzz/diff/: .gitignore  README.md  diff_fuzz.py  generators.py  harness.py
fuzz/fuzz_targets/: colour_find_rgb.rs
man/man1/: ztmux.1  ztmuxall.1
parity/: PARITY_ROADMAP.md  parity_summary.json  run_known_gaps.sh  run_parity.sh  verify_one.sh
parity/cases/: 010_arith_add.fmt  011_arith_sub.fmt  012_arith_mul.fmt  013_arith_div.fmt  014_arith_mod.fmt  015_arith_div_float.fmt  016_arith_nested.fmt  017_arith_neg.fmt  020_cmp_eq_true.fmt  021_cmp_eq_false.fmt  022_cmp_ne.fmt  023_cmp_lt.fmt  024_cmp_gt.fmt  025_cmp_and.fmt  026_cmp_or.fmt  027_cmp_fnmatch.fmt  030_str_len_left.fmt  031_str_len_right.fmt  032_str_sub.fmt  033_str_sub_g.fmt  034_str_literal.fmt  035_str_basename.fmt  036_str_dirname.fmt  037_str_quote.fmt  038_str_trim.fmt  040_cond_eq.fmt  041_cond_ne.fmt  042_cond_nested.fmt  043_cond_empty.fmt  050_pad_right.fmt  051_pad_left.fmt  061_window_height.fmt  062_session_windows.fmt  063_window_panes.fmt  065_literal_mixed.fmt  1000_main_vertical_mpw20_3panes.sh  1001_main_vertical_mpw30_2panes.sh  1002_double_hash.fmt  1002_main_vertical_mpw50_3panes.sh  1003_hash_brace_escape.fmt  (+1007 more)
parity/known_gaps/: README.md  cmd_switch_mode.sh  fmt_floating_pane.sh  fmt_pane_zoomed_flag.sh  fmt_session_alert_flags.sh  fmt_synchronized_output.sh  fmt_terminal_features.sh  opt_copy_mode_line_numbers.sh  opt_misc.sh  opt_pane_border_status.sh  opt_pane_scrollbars.sh  opt_prompt_cursor.sh  opt_theme.sh  opt_tree_mode.sh  opt_utf8_width.sh
regress/: Makefile
scripts/: annotate_c_links.py  gen_port_report.py  gen_zsh_completion.py  memcheck.sh
src/: alerts.rs  arguments.rs  attributes.rs  cfg.rs  client.rs  cmd.rs  cmd_attach_session.rs  cmd_bind_key.rs  cmd_break_pane.rs  cmd_capture_pane.rs  cmd_choose_tree.rs  cmd_command_prompt.rs  cmd_confirm_before.rs  cmd_copy_mode.rs  cmd_detach_client.rs  cmd_display_menu.rs  cmd_display_message.rs  cmd_display_panes.rs  cmd_find.rs  cmd_find_window.rs  cmd_if_shell.rs  cmd_join_pane.rs  cmd_kill_pane.rs  cmd_kill_server.rs  cmd_kill_session.rs  cmd_kill_window.rs  cmd_list_buffers.rs  cmd_list_clients.rs  cmd_list_keys.rs  cmd_list_panes.rs  cmd_list_sessions.rs  cmd_list_windows.rs  cmd_load_buffer.rs  cmd_lock_server.rs  cmd_move_window.rs  cmd_new_session.rs  cmd_new_window.rs  cmd_parse.rs  cmd_paste_buffer.rs  cmd_pipe_pane.rs  (+92 more)
src/compat/: b64.rs  closefrom.rs  fdforkpty.rs  freezero.rs  getdtablecount.rs  getopt.rs  getpeereid.rs  getprogname.rs  imsg.rs  imsg_buffer.rs  ntohll.rs  reallocarray.rs  recallocarray.rs  setproctitle.rs  strlcat.rs  strlcpy.rs  strtonum.rs  systemd.rs  tree.rs  unvis.rs  vis.rs
src/extensions/: active.rs  age.rs  ahead.rs  alerts.rs  autoname.rs  bcast.rs  borders.rs  buffers.rs  busy.rs  changes.rs  clear.rs  cmd.rs  commit.rs  conflicts.rs  connected.rs  constrain.rs  control.rs  cwd.rs  dashboard.rs  dead.rs  dedup.rs  density.rs  destroy.rs  detached.rs  diagnostics.rs  disk.rs  doctor.rs  elapsed.rs  env.rs  equalize.rs  events.rs  fanout.rs  find.rs  focus.rs  git.rs  gitcmd.rs  gone.rs  graph.rs  grep.rs  groups.rs  (+79 more)
src/ported/: alerts.rs  arguments.rs  attributes.rs  bitstr.rs  client.rs  cmd.rs  cmd_attach_session.rs  cmd_capture_pane.rs  cmd_command_prompt.rs  cmd_confirm_before.rs  cmd_copy_mode.rs  cmd_detach_client.rs  cmd_display_menu.rs  cmd_display_message.rs  cmd_display_panes.rs  cmd_find.rs  cmd_find_window.rs  cmd_if_shell.rs  cmd_join_pane.rs  cmd_kill_pane.rs  cmd_kill_server.rs  cmd_kill_session.rs  cmd_kill_window.rs  cmd_list_buffers.rs  cmd_list_clients.rs  cmd_list_keys.rs  cmd_list_panes.rs  cmd_list_sessions.rs  cmd_list_windows.rs  cmd_new_window.rs  cmd_parse.rs  cmd_paste_buffer.rs  cmd_pipe_pane.rs  cmd_queue.rs  cmd_rename_session.rs  cmd_resize_pane.rs  cmd_resize_window.rs  cmd_rotate_window.rs  cmd_run_shell.rs  cmd_save_buffer.rs  (+78 more)
src/ported/compat/: b64.rs  freezero.rs  getdtablecount.rs  getopt.rs  getpeereid.rs  imsg.rs  imsg_buffer.rs  mod.rs  ntohll.rs  queue.rs  reallocarray.rs  recallocarray.rs  strlcat.rs  strlcpy.rs  strtonum.rs  tree.rs  unvis.rs  vis.rs
tests/: no_c_alloc_for_rust_types.rs  no_key_code_truncation.rs  ported_fn_names_match_c.rs  server_survives_bad_targets.rs
tests/data/: fake_fn_allowlist.txt
