[package]
name = "ztmux-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
libfuzzer-sys = { version = "0.4.10" }

ztmux = { path = "..", package = "ztmux" }

[[bin]]
name = "colour_find_rgb"
path = "fuzz_targets/colour_find_rgb.rs"
test = false
doc = false
bench = false
